--- a/_doc/notebooks/dsgarden/correlation_non_lineaire.ipynb
+++ b/_doc/notebooks/dsgarden/correlation_non_lineaire.ipynb
@@ -940,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
@@ -962,7 +962,7 @@
     "\n",
     "def pairplot_cross_val(data, model=None, ax=None, **params):\n",
     "    if ax is None:\n",
-    "        fig, ax = plt.subplots(\n",
+    "        _fig, ax = plt.subplots(\n",
     "            data.shape[1], data.shape[1], figsize=params.get(\"figsize\", (10, 10))\n",
     "        )\n",
     "    if \"figsize\" in params:\n",
