--- a/_doc/notebooks/metric/pvalues_examples.ipynb
+++ b/_doc/notebooks/metric/pvalues_examples.ipynb
@@ -1045,7 +1045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1087,7 +1087,7 @@
     "    if ax is None:\n",
     "        import matplotlib.pyplot as plt\n",
     "\n",
-    "        fig, ax = plt.subplots(1, 1, figsize=figsize)\n",
+    "        _fig, ax = plt.subplots(1, 1, figsize=figsize)\n",
     "\n",
     "    smarker = {\n",
     "        (True, True): \"o-\",\n",
