--- a/_doc/notebooks/ml/logreg_voronoi.ipynb
+++ b/_doc/notebooks/ml/logreg_voronoi.ipynb
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
     "    cmap = plt.cm.tab20\n",
     "    Z = Z.reshape(xx.shape)\n",
     "    if ax is None:\n",
-    "        fig, ax = plt.subplots(1, 1, figsize=figsize or (4, 3))\n",
+    "        _fig, ax = plt.subplots(1, 1, figsize=figsize or (4, 3))\n",
     "    ax.pcolormesh(xx, yy, Z, cmap=cmap)\n",
     "\n",
     "    # Plot also the training points\n",
