--- a/_doc/notebooks/ml/neural_tree_cost.ipynb
+++ b/_doc/notebooks/ml/neural_tree_cost.ipynb
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "ecef383a",
    "metadata": {},
    "outputs": [
@@ -773,7 +773,7 @@
    ],
    "source": [
     "from tqdm import tqdm\n",
-    "from onnx_array_api.ext_test_case import measure_time\n",
+    "from mlstatpy.ext_test_case import measure_time\n",
     "\n",
     "data = []\n",
     "for d in tqdm(range(2, 10)):\n",
