--- a/_doc/notebooks/ml/neural_tree_onnx.ipynb
+++ b/_doc/notebooks/ml/neural_tree_onnx.ipynb
@@ -853,13 +853,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "id": "11bccd22",
    "metadata": {},
    "outputs": [],
    "source": [
     "from onnxruntime import InferenceSession, SessionOptions\n",
-    "from onnx_extended.tools.js_profile import js_profile_to_dataframe\n",
+    "from onnx_diagnostic.helpers.rt_helper import js_profile_to_dataframe\n",
     "\n",
     "sess_options = SessionOptions()\n",
     "sess_options.enable_profiling = True\n",
