--- a/_doc/notebooks/ml/regression_no_inversion.ipynb
+++ b/_doc/notebooks/ml/regression_no_inversion.ipynb
@@ -202,11 +202,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from onnx_array_api.ext_test_case import measure_time"
+    "from mlstatpy.ext_test_case import measure_time"
    ]
   },
   {
